--- a/form/src/app/form-demo/form-demo.component.html
+++ b/form/src/app/form-demo/form-demo.component.html
@@ -5,6 +5,14 @@
      <label for="skuInput">SKU</label>
      <input type="text" id="skuInput" placeholder="SKU" name="sku" 
             [formControl]="myForm.controls['sku']" class="form-control">
+            <hr>
+            <label for="skuInput">ESKEREEEE</label>
+     <input type="text" id="skuInput" placeholder="SKU" name="sku" 
+            [formControl]="myForm.controls['sku']" class="form-control">
+            <hr>
+            <label for="skuInput">PINOOOOOO</label>
+     <input type="text" id="skuInput" placeholder="SKU" name="sku" 
+            [formControl]="myForm.controls['sku']" class="form-control">
    </div>
    <button type="submit" class="btn btn-primary">Submit</button>
  </form>
