--- a/form/src/app/form-demo/form-demo.component.html
+++ b/form/src/app/form-demo/form-demo.component.html
@@ -6,13 +6,13 @@
      <input type="text" id="skuInput" placeholder="SKU" name="sku" 
             [formControl]="myForm.controls['sku']" class="form-control">
             <hr>
-            <label for="skuInput">ESKEREEEE</label>
+            <label for="skuInput">manu</label>
      <input type="text" id="skuInput" placeholder="SKU" name="sku" 
-            [formControl]="myForm.controls['sku']" class="form-control">
+            [formControl]="myForm.controls['manu']" class="form-control">
             <hr>
-            <label for="skuInput">PINOOOOOO</label>
+            <label for="skuInput">koala</label>
      <input type="text" id="skuInput" placeholder="SKU" name="sku" 
-            [formControl]="myForm.controls['sku']" class="form-control">
+            [formControl]="myForm.controls['koala']" class="form-control">
    </div>
    <button type="submit" class="btn btn-primary">Submit</button>
  </form>
